chore: changed function naming
